# misc

./: .gitignore  README.md  unstylish-haskell.yaml
alex-playground/: .gitignore  hie.yaml  package.yaml
apportionment/: .gitignore  hie.yaml  package.yaml
async-resource/: async-resource.cabal
async-resource/src/: Main.hs
auto-0hh1/: .gitignore  package.yaml  stack.yaml
auto-0hn0/: .gitignore  package.yaml  stack.yaml
auto-tents/: .gitignore  README.md  package.yaml
balance/: Balance.hs  Balance.txt
battle-record-packer/: .gitignore  brp  package.yaml
brick-mbase/: .gitignore  package.yaml
brick-playground/: .gitignore  package.yaml  stack.yaml
butterfly/: butterfly.cabal
chess/: .gitignore  README.md  hie.yaml  package.yaml
chinese-remainder/: package.yaml  stack.yaml
collect-extras/: .gitignore  package.yaml
conduit-playground/: .gitignore  .hlint.yaml  package.yaml
csv-manip/: CSVManip.hs
cycle-playground/: .gitignore
delimited-continuation-playground/: delimited-continuation-playground.cabal  hie.yaml  package.yaml  stack.yaml
dhall-playground/: .gitignore  confspec.dhall  package.yaml
diagrams-playground/: .gitignore  hie.yaml  package.yaml  stack.yaml
dynamical-systems/: .gitignore  .hlint.yaml  README.md  hie.yaml  package.yaml  stack.yaml
echo-server/: Echo.hs
ellipse-approx/: .gitignore  package.yaml
exercism-migration/: .gitignore  README.md  hie.yaml  package.yaml
exercism-wizard/: .gitignore  README.md  ew  hie.yaml  package.yaml  stack.yaml
extensible-effects-play/: extensible-effects-play.cabal  stack.yaml
(+473 files in other folders)
